--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,18 @@
-body {
+@import 'bootstrap/dist/css/bootstrap.min.css';
+html, body {
+  width: 100%;
+  height: 100%;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+#root, .App {
+  width: 100%;
+  height: 100%;
 }
 
 code {
